# zpanel

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  zpanel
zmon/: util.py  web.py  zcli.py
zmon/data/views/: index.tpl
zmon/data/web_static/: style.css
zpanel/eece4534emu/bootstrap/bootstrap_buildenv/zpanel/: setup.py
zpanel/eece4534emu/bootstrap/bootstrap_buildenv/zpanel/zmon/: zcli.py
zpanel/eece4534emu/bootstrap/bootstrap_buildenv/zpanel/zmon/data/views/: index.tpl
