[tool.poetry]
name = "zpanel"
version = "0.1.0"
description = ""
authors = ["Bruno <brunosmmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cheroot = "^8.5.2"
bottle = {git = "https://github.com/bottlepy/bottle.git", rev = "master"}
pyzmq = "^22.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
