[tool.poetry]
name = "zpanel"
version = "0.1.0"
description = ""
authors = ["Bruno <brunosmmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cheroot = "^9.0.0"
bottle = {git = "https://github.com/bottlepy/bottle.git", rev = "master"}
pyzmq = "^25.0.0"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
